[package]
name = "general-sam-py"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for general-sam and some utilities"
homepage = "https://github.com/ModelTC/general-sam-py"
repository = "https://github.com/ModelTC/general-sam-py"
readme = "README.md"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]

[lib]
name = "general_sam"
crate-type = ["cdylib"]

[dependencies]
either = "1.10.0"
general-sam = { version = "1.0.0", features = ["all"] }
pyo3 = { version = "0.21.1", features = ["extension-module", "generate-import-lib", "abi3-py38"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
