[package]
name = "general-sam-py"
version = "1.0.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Python bindings for general-sam and some utilities"
homepage = "https://github.com/ModelTC/general-sam-py"
repository = "https://github.com/ModelTC/general-sam-py"
readme = "README.md"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]

[lib]
name = "general_sam"
crate-type = ["cdylib"]

[dependencies]
either = "1.15.0"
general-sam = { version = "1.0.3", features = ["all"] }
pyo3 = { version = "0.26.0", features = ["extension-module", "generate-import-lib", "abi3-py310"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
